app.css
:root{
	--bar-padding-top: 14px;
	--bar-padding-bottom: 14px;

	--bar-font-size: 20px;
	--bar-height: 32px;
	--bar-line-height: calc(32 / 20);
}

@supports(padding: env(safe-area-inset-top)) {
    :root{
        --bar-padding-top: calc(14px + env(safe-area-inset-top));
    }
}
/*
 * TEMP RULLES START
*/

.state,
.menu,
.tab-item
{transition: transform .3s; transition-timing-function: ease-out;}

[hidden] {display: none !important;}
* {
	user-select: none;
	-webkit-user-select: none;
}

/*
 * TEMP RULLES END
*/

html, body{
	height: 100%;
	width: 100%;
	overflow: hidden;
}

body{
	background-color: black;
	position: relative;
	margin: 0;
}

@supports(padding: env(safe-area-inset-bottom)) {
	@media (orientation: portrait){
		body{
			height: calc(100% + env(safe-area-inset-bottom) - 34px);
		}
		html{
			height: calc(100% + env(safe-area-inset-bottom) + 10px);
		}
	}
}

.bg{
	background-size: cover;
	background-position: center center;

	position: fixed;

	top: -5%;
	right: -5%;
	bottom: -5%;
	left: -5%;

	z-index: -1;

	-webkit-filter: blur(10px);
}
.bg:before{
	content: "";
	background-color: rgba(0,0,0,.5);
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 1;
}

/*
 * ICONS START
*/

.icon{
	display: inline-block;
	vertical-align: middle;
	color: #ff5252;
	font-size: 24px;
}
.icon-equalizer{}
.icon-arrow-down-right{
	font-weight: 700;
}
.icon-arrow-left{
	font-weight: 700;
	padding: 3px;
	margin-left: -3px;
}

/*
 * ICONS END
*/



.state{
	width: 100%;
	height: 100%;
}



/*
 * MENU START
*/

.menu{
	font-size: 0;
	
	padding: 0 0 16px 0;
	
	position: absolute;
	left: 0;
	right: 0;

	z-index: 2;
}
.menu-nav{
	display: inline-block;

	font-size: 0;

	vertical-align: top;

	width: 78.5%;
}
.menu-nav-item{
	color: #ebebfa;
	display: inline-block;

	font-family: 'Roboto';
	font-size: 16.6666667px;
	font-weight: 400;

	text-align: center;
	vertical-align: top;
	text-shadow: 1px 2px 2px rgba(49, 49, 64, 0.75);


	padding: 21px 0 27px 0;
	
	width: 33.33333%;
}
.menu-nav-item__active{
	border-top: 10px solid #f66762;
	padding-top: 11px;
}
.menu-hide{
	cursor: pointer;
	display: inline-block;

	vertical-align: top;
	text-align: right;

	width: 16.5%;
}
.menu-hide-button{
	display: inline-block;
	padding: 17px 11px 0 11px;
	position: relative;
	left: 8px;
}
.menu-search{
	display: inline-block;
	padding: 0 6%;

	position: relative;
	width: 100%;
	box-sizing: border-box;
}
.menu-search-submit{
	cursor: pointer;
	display: inline-block;
	vertical-align: middle;

	margin: -10.5px 0 0 17px;

	position: absolute;
	top: 50%;
	left: 6%;

	z-index: 1;
}
.menu-search-field{
	background: rgba(217, 202, 239, 0.29);
	border-radius: 500px;
	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75) inset, -1px -1px 1px rgba(255, 255, 255, 0.7) inset;

	display: block;

	padding: 0 94px 0 43px;

	position: relative;
}
.menu-search-field input{
	background: none;
	border: none;
	color: #ebebfa;
	display: block;
	
	padding: 12px 0;
	margin: 0;

	font-family: 'Roboto';
	font-weight: 300;
	font-size: 17px;
	
	line-height: 1;
	
	width: 100%;
	
	-webkit-tap-highlight-color: rgba(0,0,0,0);
}
.menu-search-field input:focus{
	outline: none;
}
.menu-search-refresh{
	cursor: pointer;
	margin: -12px 8px 0 0;
	position: absolute;
	right: 6%;
	top: 50%;
}

/*
 * MENU END
*/




/*
 * BOT START
*/
.bot{
	display: flex;
	/* background: url(img/interface/playlist-item-bg.png) 0 0 no-repeat, rgba(29, 39, 44, 0.8);*/
	background-size: 110% 110%;
}
.bot-s{
	flex: 1 0 auto;
	width: 1px;
	padding: 5% 10%;
	text-align: center;
}
.bot-title{
	text-align: center;
}
.bot-title-text{
	color: rgba(255, 255, 255, 0.8);
	display: inline-block;

	font-family: 'Roboto';
	font-size: 18px;
	font-weight: 100;

	padding: 1px 0;
}
.bot-title-text em{
	font-weight: 300;
	font-size: 20px;
	margin-left: 0.25em;
	font-style: normal;
}
/*
 * BOP END
*/




/*
 * PLAYER START
*/
.state[data-state="player"]{
	display: flex;
	flex-direction: column;
	transform: translate3d(0, 0, 1px);
}
.state[data-state="player"][off]{
	transform: translate3d(-99.9%, 0, 1px);
}
.player{
	box-sizing: border-box;
	display: flex;
	flex: 1 0 auto;
	flex-direction: column;
	align-items: center;
}
.player-cover{
	flex: 2;
	margin-top: 60px;
	height: 0px;
	position: relative;
	text-align: center;
}
@supports(padding: env(safe-area-inset-bottom)) {
	@media (orientation: portrait){
		.player-cover{
			margin-top: calc(env(safe-area-inset-bottom) + 60px);
		}
	}
}
.player-cover img{
	visibility: hidden;
}
.player-cover img[src^="http"],
.player-cover img[src^="./"]{
	position: absolute;
	top: 0;
	bottom: 0;
	height: 100%;
	transform: translateX(-50%);
	padding-top: 0;
	visibility: initial;
}
.player-trackbar{
	cursor: pointer;
	width: calc(100% - 100px);
	max-width: 500px;
	margin: 3% auto;
	position: relative;
}
.player-trackbar:before{
	content: '';
	position: absolute;
	left: 0;
	right: 0;
	margin-top: -.5px;
	height: 1px;
	top: 50%;
	background-color: rgba(244, 59, 0, .25);
}
.player-trackbar span{
	cursor: initial;
}
.player-trackbar-bar{
	transition: width .05s; transition-timing-function: linear;
	display: block;
	position: relative;
	height: 1px;
	margin: 15px 0;
	background-color: rgb(255, 82, 82);
	z-index: -1;
}
.player-trackbar-time{
	color: rgba(254, 95, 89, 0.9);

	font-family: 'Roboto';
	font-size: 16px;
	font-weight: 400;

	position: absolute;
	z-index: -1;
	margin-top: -8px;
	top: 100%;
}
	.player-trackbar-time__current{
		left: 0;
	}
	.player-trackbar-time__duration{
		right: 0;
	}

.player-title{
	color: rgba(235, 235, 250, 0.9);

	font-size: 6vh;
	font-family: 'Roboto';
	font-weight: 300;

	text-align: center;
	text-transform: lowercase;

	margin: 2vh 0 0 0;
}
.player-title:focus{
	outline: none;
}
.player-title[contenteditable]{
	user-select: initial;
	-webkit-user-select: initial;
}
.player-author{
	color: #ff5252;

	font-size: 16.6667px;
	font-family: 'Roboto';
	font-weight: 300;

	text-align: center;

	margin: 0 6% 2vh 6%;
}
.player-actions{
	font-size: 0;
	flex: 1;
	margin: 0 auto 60px auto;
	width: calc(100% - 100px);
	max-width: 500px;
	display: flex;
	align-items: center;
	justify-content: space-between;
}
.player-actions-button{
	cursor: pointer;

	display: inline-block;

	vertical-align: middle;
	text-align: center;

	color: #ebebfa;
	font-size: 24px;
	font-weight: normal;
}
.player-actions-button .icon-play,
.player-actions-button .icon-pause{
	color: #ff5252;
	font-size: 2.7em;
	display: inline-block;
	transform: scaleY(0.8);
}
.player-actions-button .icon-forward,
.player-actions-button .icon-backward{
	color: #fff;
	font-size: 2.2em;
	display: inline-block;
	transform: scaleY(0.7);
}
/*
 * PLAYER END
*/



/*
 * PLAYLIST START
*/
.state[data-state="playlist"]{
	transform: translate3d(0, 0, 1px);
	padding-top: 0;
	position: fixed;
	top: 0;
	z-index: 6;
}
.state[data-state="playlist"][off]{
	transform: translate3d(0, 99.9%, 1px);
	margin-top: -60px;
}
.state[data-state="playlist"][off] .bar{
	padding-top: 14px;
}
#playlist{
	height: 100%;
	overflow: scroll;
	-webkit-overflow-scrolling: touch;
}
.playlist{
	background-color: rgba(29, 39, 44, 0.85);
	box-sizing: border-box;
	height: calc(100% - 58px);
	overflow: hidden;
	position: relative;
	z-index: 1;
}
.state[data-state="playlist"] .icon-list{
	font-size: 2em;
}
	.playlist__square{
		padding: 20px 20px;
		white-space: initial;
		text-align: center;
	}
.playlist-item{
	cursor: pointer;
	font-size: 0;

	margin-bottom: -2px;
	position: relative;
	overflow: hidden;
	opacity: .9;
}
.playlist-item:hover{
	opacity: 1;
}
.playlist-item.playlist-item__current:before{
	background-image: url(img/interface/icon-bars.png);
	background-size: 100% 100%;

	content: '';

	position: absolute;
	top: 39px;
	right: 40px;

	width: 19px;
	height: 22px;
}
	.playlist__line .playlist-item{
		background: url('img/interface/playlist-item-bg.png') 5% 0 no-repeat;
		background-size: 110% 100%;
		height: 78px;
	}
	.playlist__line .playlist-item-cover{
		float: left;
		margin: 14px 28px 0 22px;
	}
	.playlist__line .playlist-item-title{
		padding: 14px 22px;
	}
	.playlist__square .playlist-item{
		display: inline-block;
		max-width: 100px;
		margin: 8px;
	}
	.playlist__square .playlist-item-title{
		font-size: 10.6666667px;
		padding: 0 4px;
		text-align: center;
		position: relative;
		top: 8px;
	}
.playlist-scroll{
	background-color: #ff5252;
	border-radius: 500px;

	position: absolute;
	right: 4px;

	width: 5px;
	height: 64px;

	z-index: 1;
}
.playlist-item-title{
	color: rgba(216, 217, 233, 0.9);

	line-height: 24px;
	font-size: 20px;
	font-family: 'Roboto';
	font-weight: 500;
	margin: 0;
}
.playlist-item-title__with-cover{
	line-height: 20px;
	font-size: 16.66667px;
	font-weight: 400;
	text-shadow: 1px 2px 2px rgba(49, 49, 64, 0.75);
}
.playlist-item-cover{
	box-shadow: 2.3333px 4.3333px 5px 0px rgba(0, 0, 0, 0.75);
}
.playlist-item-title-text{
	display: inline-block;

	vertical-align: middle;
	

	overflow: hidden;

	width: calc(100% - 86px);
	max-height: 2.4em;
}
.playlist-item-title-follow{
	color: rgba(23, 172, 195, 0.8);
	display: block;

	line-height: 16px;
	font-size: 13.33333333px;
	font-family: 'Roboto';
	font-weight: 300;
}
.playlist-item-author{
	display: block;
	color: rgba(235, 235, 250, 0.8);

	line-height: 16px;
	font-size: 13.33333333px;
	font-family: 'Roboto';
	font-weight: 300;

	margin: 7px 0 0 0;
}
.playlist-item-time{
	color: rgba(255, 255, 255, 0.9);

	font-size: 16px;
	font-family: 'Roboto';
	font-weight: 500;

	margin: 14px 35px 6px 0;
}
.playlist-item-active{
	text-align: center;
}
.playlist-item-s{
	display: inline-block;
	vertical-align: top;
}
.playlist-item-s__left{
	width: calc(100% - 100px);
	padding: 14px 22px;
	box-sizing: border-box;
}
.playlist-item-s__left .playlist-item-title{
	padding: 0;
}
.playlist-item-s__right{
	width: 100px;
	text-align: right;
}
/*
 * PLAYLIST END
*/


/*
 * EQ START
*/

.state[data-state="eq"]{
	transform: translate3d(0, 0, 1px);
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 0;
}
.state[data-state="eq"][off] {
	transform: translate3d(99.9%, 0, 1px);
}
.eq{
	flex: 1 0 auto;
}
.roller{
	padding: 25%;
	display: inline-block;
	position: relative;
}
.roller .d{
	display: inline-block;
	border-radius: 1000px;
	position: absolute;
	top: 2.5%;
	left: 2.5%;
	bottom: 2.5%;
	right: 2.5%;
}
.roller .d:before{
	content: '';
	border-radius: 1000px;
	position: absolute;
	top: 4%;
	right: 4%;
	left: 4%;
	bottom: 4%;
	background-color: #2e3140;
}
.roller .i{
	left: 45%;
	top: 8%;
	right: 45%;
	bottom: 82%;
	border-radius: 1000px;
	background-image: inherit;
	background-color: #1f212d;
	position: absolute;
	transform: rotate(180deg);
}
.roller .i:before{
	content: '';
	border-radius: 1000px;
	position: absolute;
	top: 8%;
	right: 8%;
	left: 8%;
	bottom: 8%;
	background-color: #2e3140;
}

.roller .t{
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
}

.roller .progress {
	transform: rotate(-90deg);
}

.roller .progress__value {
	r: 47.5%;
	cx: 50%;
	cy: 50%;
	fill: none;
	stroke: #fa7067;
	stroke-width: 5%;
	stroke-dasharray: calc(2 * 3.14 * 47.5%);
}


/* 0 - 319px */
@media (max-width: 319px) {
	.player-actions-button{
		font-size: 7.52351097vw;
	}
}

